# USB-Goose

./: .gitignore  CMakeLists.txt  README.md  build.sh
docs/: build.md
firmware/ch569/: CMakeLists.txt  ch569_foothold.c  ch569_hid.c
firmware/cmake/: ch569_toolchain.cmake  esp32c6_toolchain.cmake
firmware/common/: CMakeLists.txt  comm_manager.c  comm_manager.h  exfiltration.c  exfiltration.h  payload_framework.h
firmware/common/cmake/: DuckyCommonConfig.cmake.in
firmware/common/comm/: spi_slave.c
firmware/common/src/: payload_framework.c  protocol.c  security.c
firmware/esp32c6/: CMakeLists.txt
firmware/esp32c6/comm/: spi_master.c
firmware/esp32c6/wireless/: wifi.c
firmware/examples/: CMakeLists.txt  simple_payload.c
firmware/examples/combined_payloads/: exfiltration.cpp  multi_vector_exfil.c  test_interchip.c
firmware/examples/nim_payloads/: os_detect.nim
firmware/examples/python_payloads/: os_detect.py
firmware/examples/usb_payloads/: os_detect_basic.c
firmware/examples/wireless_payloads/: wifi_recon.rs
firmware/goose/: core.h
firmware/hal/: core.h  hal.h  hid.c  hid.h
firmware/tools/: CMakeLists.txt
firmware/tools/nim/: bindings.c  compile.py
firmware/tools/pythran/: bindings.cpp  compile.py
firmware/tools/rust/: compile.py
